--- a/www/index.html
+++ b/www/index.html
@@ -64,6 +64,7 @@
             <input id="query" type="text" value="Hello" style="width: 100%; height: 40px; display: block; margin: 0;"></input>
             </br>
             <p><input type="button" style="width: 50%; height: 40px;" onclick="sendText();" value="Send Text"></p>
+            <p><input type="button" style="width: 50%; height: 40px;" onclick="stopListening();" value="Stop Listening"></p>
             </br>
             </br>
 
@@ -85,6 +86,10 @@
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript">
+            
+            function stopListening() {
+                ApiAIPlugin.stopListening();
+            }
             
             function sendText() {
                 try {
@@ -112,10 +117,12 @@
                     var circle3 = document.getElementById("mycircle3");
 
                     ApiAIPlugin.setListeningStartCallback(function () {
+                                                          alert(1);
                         parentElement.setAttribute('style', 'display:block;');
                     });
 
                     ApiAIPlugin.setListeningFinishCallback(function () {
+                                                           alert(2);
                         parentElement.setAttribute('style', 'display:none;');
                     });
 
