Change agent for proper testing

--- a/www/index.html
+++ b/www/index.html
@@ -223,19 +223,20 @@
                                                 query: text,
                                                 entities: [
                                                   {
-                                                    name: "roomObjects",
+                                                    name: "dwarfs",
                                                     entries: [
                                                       {
-                                                        value: "lamo1",
+                                                        value: "Ori",
                                                         synonyms: [
-                                                          "lamp",
-                                                          "living room lamp"
+                                                          "ori",
+                                                          "Nori"
                                                         ]
                                                       },
                                                       {
-                                                        value: "lamp2",
+                                                        value: "bifur",
                                                         synonyms: [
-                                                          "kitchen lamp"
+                                                          "Bofur",
+                                                          "Bombur"
                                                         ]
                                                       }
                                                     ]
@@ -290,19 +291,20 @@
                     ApiAIPlugin.requestVoice({
                                                 entities: [
                                                   {
-                                                    name: "roomObjects",
+                                                    name: "dwarfs",
                                                     entries: [
                                                       {
-                                                        value: "lamo1",
+                                                        value: "Ori",
                                                         synonyms: [
-                                                          "lamp",
-                                                          "living room lamp"
+                                                          "ori",
+                                                          "Nori"
                                                         ]
                                                       },
                                                       {
-                                                        value: "lamp2",
+                                                        value: "bifur",
                                                         synonyms: [
-                                                          "kitchen lamp"
+                                                          "Bofur",
+                                                          "Bombur"
                                                         ]
                                                       }
                                                     ]
